# PMSystem

./: .dockerignore  .gitignore  CURRENT_STATUS.md  FINANCE_TEST_PLAN.md  MONGODB_CONVERSION_SUMMARY.md  MONGODB_SETUP.md  PROJECT_MANAGER_TEST_PLAN.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_MONGODB.md  README.md  SETUP.md  TEAM_MEMBER_TEST_PLAN.md  VIEWER_TEST_PLAN.md  docker-compose.yml  user_facing_explanation.md
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: main.py  seed.py
backend/app/api/v1/: __init__.py  auth.py  dashboard.py  expenses.py  income.py  kanban.py  notifications.py  projects.py  tasks.py  time_entries.py  users.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  security.py
backend/app/models/: __init__.py  financial.py  notification.py  project.py  task.py  time_entry.py  user.py
backend/app/schemas/: common.py  financial.py  notification.py  project.py  task.py  time_entry.py  user.py
backend/app/services/: auth_service.py  email_service.py  financial_service.py  notification_service.py  project_service.py  task_service.py
backend/app/templates/emails/: README.md  deadline_approaching.html  expense_status_changed.html  task_assigned.html  welcome.html
backend/app/websockets/: kanban.py
frontend/: .env.local.example  .gitignore  .prettierignore  .prettierrc.json  Dockerfile  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/income/: page.tsx
frontend/src/hooks/: useAuth.ts  useKanbanRealtime.ts  useNotifications.ts  useWebSocket.ts
frontend/src/lib/: api.ts  auth.ts  websocket.ts
frontend/src/types/: common.ts  financial.ts  project.ts  task.ts  user.ts
history/prompts/001-project-management-mvp/: 0001-project-management-mvp-specification.spec.prompt.md  0002-implementation-plan-design-artifacts.plan.prompt.md  (+26 more)
specs/001-project-management-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+72 files in other folders)
